--- a/ElevenNote.WebAPI/Web.config
+++ b/ElevenNote.WebAPI/Web.config
@@ -10,9 +10,8 @@
       type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089"
       requirePermission="false"/>
   </configSections>
-  <connectionStrings>
-    <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\aspnet-ElevenNote.WebAPI-20210206125659.mdf;Initial Catalog=aspnet-ElevenNote.WebAPI-20210206125659;Integrated Security=True"
-      providerName="System.Data.SqlClient" />
+   <connectionStrings>
+    <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;Initial Catalog=ElevenNote;Integrated Security=True" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <appSettings></appSettings>
   <system.web>
